JumpScript/tests/baselines/reference/unusedParametersInLambda2.errors.txt
tests/cases/compiler/unusedParametersInLambda2.jump(3,17): error TS6133: 'X' is declared but its value is never read.


==== tests/cases/compiler/unusedParametersInLambda2.jump (1 errors) ====
    class A {
        public f1() {
            return (X, Y) => {
                    ~
!!! error TS6133: 'X' is declared but its value is never read.
                Y;
            }
        }
    }